--- a/vignettes/clr/biocad_registry/biocad_registry.html
+++ b/vignettes/clr/biocad_registry/biocad_registry.html
@@ -39,6 +39,7 @@ export class biocad_registry extends <a href="/vignettes/clr/biocad_registry/bio
    regulation_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
    sequence_graph: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
    subcellular_compartments: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
+   taxonomy_tree: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
    vocabulary: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a>;
 }
 </code>
@@ -57,6 +58,7 @@ export class biocad_registry extends <a href="/vignettes/clr/biocad_registry/bio
 <li>use by <i>property</i> member <code>regulation_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 <li>use by <i>property</i> member <code>sequence_graph</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 <li>use by <i>property</i> member <code>subcellular_compartments</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
+<li>use by <i>property</i> member <code>taxonomy_tree</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 <li>use by <i>property</i> member <code>vocabulary</code>: <a href="/vignettes/clr/Oracle/LinuxCompatibility/MySQL/MySqlBuilder/Model.html">Model</a></li>
 </ol>
 
