--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -112,6 +112,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_dbxrefs">
+    <a href="./data_imports/imports_dbxrefs.html">imports_dbxrefs</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_taxonomy">
     <a href="./data_imports/imports_taxonomy.html">imports_taxonomy</a>
   </td>
