--- a/vignettes/biocad_registry/data_imports.html
+++ b/vignettes/biocad_registry/data_imports.html
@@ -112,6 +112,12 @@ table caption {font-size:14px;font-weight:bolder;}
   <td></td>
 </tr>
 <tr>
+  <td id="imports_metab_repo">
+    <a href="./data_imports/imports_metab_repo.html">imports_metab_repo</a>
+  </td>
+  <td></td>
+</tr>
+<tr>
   <td id="imports_genomics">
     <a href="./data_imports/imports_genomics.html">imports_genomics</a>
   </td>
